# rust-sgx-samples

./: README.md
channel_establishment/attestation/: Cargo.toml
channel_establishment/attestation/src/: attestation.rs  cert.rs  key.rs  lib.rs  platform.rs  report.rs  service.rs  verifier.rs
channel_establishment/rpc/: Cargo.toml
channel_establishment/rpc/src/: config.rs  endpoint.rs  lib.rs  server.rs
channel_establishment/services/some_service/: Makefile
channel_establishment/services/some_service/app/: Cargo.toml  Enclave_u.c  Enclave_u.h  build.rs
channel_establishment/services/some_service/app/src/: main.rs  ocall.rs
channel_establishment/services/some_service/enclave/: Cargo.toml  Enclave.edl  Enclave_t.c  Enclave_t.h  Makefile
channel_establishment/services/some_service/enclave/src/: lib.rs
keys/: dcap_root_ca_cert.pem
