[package]
name = "attestation"
version = "0.1.0"
authors = ["CGair23 <chengeair23@sjtu.edu.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow      = { git = "https://github.com/mesalock-linux/anyhow-sgx.git" }
chrono      = { git = "https://github.com/mesalock-linux/chrono-sgx" }
webpki      = { git = "https://github.com/mesalock-linux/webpki", branch = "mesalock_sgx" }
base64      = { git = "https://github.com/mesalock-linux/rust-base64-sgx" }
yasna       = { git = "https://github.com/mesalock-linux/yasna.rs-sgx", features = ["bit-vec", "num-bigint", "chrono"] }
num-bigint  = { git = "https://github.com/mesalock-linux/num-bigint-sgx" }
bit-vec     = { version = "0.6", default-features = false}
serde       = { git = "https://github.com/mesalock-linux/serde-sgx.git", features = ["derive"] }
serde_json  = { git = "https://github.com/mesalock-linux/serde-json-sgx" }
httparse    = { version = "1.3.2", default-features=false }
itertools   = { version = "0.8" , default-features = false, features = []}
webpki-roots= { git = "https://github.com/mesalock-linux/webpki-roots", branch = "mesalock_sgx" }
url         = { git = "https://github.com/mesalock-linux/rust-url-sgx.git" }
rustls      = { tag = "sgx_1.1.3", git = "https://github.com/mesalock-linux/rustls.git", features = ["dangerous_configuration"] }
percent-encoding = { git = "https://github.com/mesalock-linux/rust-url-sgx" }
thiserror   = { tag = "sgx_1.1.3", git = "https://github.com/mesalock-linux/thiserror-sgx.git" }
hex         = { tag = "sgx_1.1.3", git = "https://github.com/mesalock-linux/rust-hex-sgx.git" }
uuid         = { tag = "sgx_1.1.3", git = "https://github.com/mesalock-linux/uuid-sgx.git", features = ["v4"] }

sgx_rand    = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd    = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["net", "backtrace"] }
sgx_tcrypto = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tse     = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_types   = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git"}
