[package]
name = "rpc"
version = "0.1.0"
authors = ["CGair23 <chengeair23@sjtu.edu.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sgx_tstd    = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["net", "backtrace", "thread"] }

anyhow      = { git = "https://github.com/mesalock-linux/anyhow-sgx.git" }
rustls      = { tag = "sgx_1.1.3", git = "https://github.com/mesalock-linux/rustls.git", features = ["dangerous_configuration"] }
webpki      = { git = "https://github.com/mesalock-linux/webpki", branch = "mesalock_sgx" }
serde       = { git = "https://github.com/mesalock-linux/serde-sgx.git", features = ["derive"] }

http       = { tag = "sgx_1.1.3", git = "https://github.com/mesalock-linux/http-sgx.git" }
attestation = { path = "../attestation" }