[package]
name = "enclave"
version = "0.1.0"
authors = ["CGair23 <chengeair23@sjtu.edu.cn>"]
edition = "2018"

[lib]
name = "service"
crate-type = ["staticlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sgx_tstd    = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["net", "backtrace"] }
sgx_types   = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git"}

rustls      = { tag = "sgx_1.1.3", git = "https://github.com/mesalock-linux/rustls.git" }
url         = { git = "https://github.com/mesalock-linux/rust-url-sgx.git" }

attestation = { path = "../../../attestation" }
rpc         = { path = "../../../rpc" }
